# ml_and_deep_learning_challenges

./: README.md  pyproject.toml
week_10_rl_agents/: main.py  pyproject.toml
week_1_foundations/: README.md  main.py  pyproject.toml  week_1_practical_learning.ipynb
week_2_linear_regression/: Week+2+-+Practical-Learning.ipynb  pyproject.toml
week_3_logistic_regression/: Practical-Learning-Week3.ipynb  pyproject.toml
week_4_decision_trees_random_forests/: Practical-Learning-Week4.ipynb  pyproject.toml
week_5_dnn_feature_learning/: .gitignore  Practical-Learning-Week5.ipynb  Practical-Learning-Week5_json.json  README.md  pyproject.toml
week_5_dnn_feature_learning/data/: hyperparameter_tuning_results.csv
week_6_cnns/: Practical-Learning-Week6.ipynb  Practical-Learning-Week6_json.json  Practical-Learning-Week6_recovered.ipynb  Practical-Learning-Week6_recovered.json  main.py  pyproject.toml
week_8_clustering/: main.py  pyproject.toml
week_9_intro_to_reinforcement_learning/: Practical_learning-Week9.ipynb  main.py  pyproject.toml
