[project]
name = "week-5-dnn-feature-learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pandas-stubs==2.2.3.250527",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "xlrd>=2.0.2",
]
